2015-08-21  Charlie Zender  <zender@uci.edu>

	* NULL-initialize lat_sin in nco_grd_mk() to prevent invalid free()

2015-08-18  Charlie Zender  <zender@uci.edu>

	* Install on hopper.nersc.gov

	* Replace #ifndef ${FOO} with #ifndef FOO in bld/Makefile so make data works on hopper

	* NCO 4.5.2-alpha9 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.5.2-alpha9 final changes';git push
	git tag -a 4.5.2-alpha9 -m 'Version 4.5.2-alpha9 tag: Work with 2D grids in either lon/lat or lat/lon (old Tempest) src/dst_grid_dims order';git push --tags

	* nco_rgr_map() determines Tempest 2D grid ordering with [src/dst]_grid_dims "name0" attribute

2015-08-03  Charlie Zender  <zender@uci.edu>

	* NCO 4.5.2-alpha8 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.5.2-alpha8 final changes';git push
	git tag -a 4.5.2-alpha8 -m 'Version 4.5.2-alpha8 tag: fix missing value normalizaion with ncra -w wgt';git push --tags

	* Re-tag 4.5.2-alpha8

	* Normalize wgt_sum by tally

	* Add new normalization test case

	* Test against actual ne30 data found that wgt_avg_scl normalization not needed

2015-08-02  Charlie Zender  <zender@uci.edu>

	* Add var->wgt infrastructure for running sum of per-file valid weights in ncra

2015-07-25  Charlie Zender  <zender@uci.edu>

	* NCO 4.5.2-alpha7 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.5.2-alpha7 final changes';git push
	git tag -a 4.5.2-alpha7 -m 'Version 4.5.2-alpha7 tag: Generate exact Gaussian grids';git push --tags

	* Gaussian grids now have lat_ctr=Legendre zeros, and lat_ntf that define spherical zones that reproduce Gaussian weights

	* Newton-Raphson iterate latitude interface location to agree with spherical zone area

	* Use Gaussian angles as latitude centers rather than bisecting interfaces

	* Show that SCRIP and NCAR T42 grid/map files accurate to 8 decimal places (NCO to 16)

	* Verify NCO Gaussian weights/angles accuracy to 16 decimal places

2015-07-24  Charlie Zender  <zender@uci.edu>
